--- a/assets/css/pages/home/_base.scss
+++ b/assets/css/pages/home/_base.scss
@@ -1,26 +1,10 @@
 //home page///
 
-.articles-section {
-    margin-top: 226px;
-
-    .section-header {
-        margin-bottom: 0;
-    }
-
-    .articles-swiper {
-        margin-left: calc((var(--bs-width) - 100vw - 80px)* 0.5);
-        overflow: hidden;
-
-        .swiper-wrapper {
-            padding: 40px 0;
-        }
-    }
-}
-
 .videos-section {
     .section-header {
         justify-content: center;
     }
+
     .row {
         --bs-gutter-x: 22px;
     }
@@ -38,8 +22,6 @@
         .padcast-swiper-container {
             // background: var(--base-bg);
             width: 100%;
-          
-
             .padcast-swiper {
                 overflow-x: hidden;
                 padding-top: 35px;
@@ -104,6 +86,20 @@
     }
 }
 
+.articles-section {
+    margin-top: 226px;
+    .section-header {
+        margin-bottom: 0;
+    }
+    .articles-swiper {
+        margin-left: calc((var(--bs-width) - 100vw - 28px)* 0.5);
+        overflow: hidden;
+        .swiper-wrapper {
+            padding: 40px 0;
+        }
+    }
+}
+
 .courses-section {
     margin-top: 202px;
 
@@ -112,9 +108,8 @@
     }
 
     .courses-swiper {
-        margin-left: calc((var(--bs-width) - 100vw - 80px)* 0.5);
         overflow: hidden;
-
+        margin-left: calc((var(--bs-width) - 100vw - 28px)* 0.5);
         .swiper-wrapper {
             padding: 40px 0;
         }
